fix(table): remove min-width on mobile view

--- a/packages/ods-react/src/style/_table.scss
+++ b/packages/ods-react/src/style/_table.scss
@@ -1,5 +1,3 @@
-@use './breakpoint';
-
 @mixin ods-table($size) {
   width: 100%;
   border-collapse: collapse;
@@ -17,7 +15,6 @@
       th,
       td {
         box-sizing: border-box;
-        min-width: calc(100vw / 3);
         line-height: 1rem;
 
         @if $size == 'sm' {
@@ -60,19 +57,6 @@
 
         &:last-child {
           border-right: 1px solid var(--ods-color-neutral-100);
-        }
-      }
-    }
-  }
-
-  @media screen and (width >= (breakpoint.$ods-breakpoint-mobile)) {
-    thead,
-    tbody,
-    tfoot {
-      tr {
-        th,
-        td {
-          min-width: auto;
         }
       }
     }
